added content for elderly

--- a/index.html
+++ b/index.html
@@ -66,44 +66,45 @@
 			<div class="card">
 			   <div class="card-header" id="firstIssue">
 				<h2 class="mb-0">
-				  <button class="btn btn-link text-dark" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+				  <button id="playfairDisplayFont" class="btn btn-link text-dark" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 					Pensions and Elderly Care
 				  </button>
 				</h2>
 			  </div>
 			  <div id="collapseOne" class="collapse show" aria-labelledby="firstIssue" data-parent="#currentIssues">
-				<div class="card-body">
+				<div id="karmaFont" class="card-body">
 					Our elderly commuinty is so monstrously overlooked and underappreciated. Nobody ever calls or writes them, or listen to what they have to say.
-					 Not Mr Burns though, he says enough! He will ensure pension checks will arrive promptly and on time, 
+					 Not Mr Burns though, he says enough! He will ensure pension checks will arrive promptly and on time, enforce mandatory visiting hours in 
+					 all nursing homes, and ensure fair treatment of the elderly in the workplace.
 				</div>
 			  </div>
 			</div>
 			<div class="card">
 			  <div class="card-header" id="secondIssue">
 				<h2 class="mb-0">
-				  <button class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+				  <button id="playfairDisplayFont" class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 					Support For Businesses
 				  </button>
 				</h2>
 			  </div>
 			  <div id="collapseTwo" class="collapse" aria-labelledby="secondIssue" data-parent="#currentIssues">
-				<div class="card-body">
-					Two assure edward whence the was. Who worthy yet ten boy denote wonder. Weeks views her sight old tears sorry. 
-					Additions can suspected its concealed put furnished. Met the why particular devonshire decisively considered partiality. 
-					Certain it waiting no entered is. Passed her indeed uneasy shy polite appear denied. Oh less girl no walk. At he spot with five of view. 
+				<div id="karmaFont" class="card-body">
+					Corporate America is under attack. Every year lecherous Mom and Pop shops open up, stealing away customers and resources from struggling conglomerates. 
+					It's time to step in and do something about this. With Mr Burns elected Constable he promises to enforce stricter regulations on the "pop-up shops" and 
+					offer stipends and support to larger corporate entities. 
 				</div>
 			  </div>
 			</div>
 			<div class="card">
 			  <div class="card-header" id="thirdIssue">
 				<h2 class="mb-0">
-				  <button class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapsedThree">
+				  <button id="playfairDisplayFont" class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapsedThree">
 						Union Rights
 				  </button>
 				</h2>
 			  </div>
 			  <div id="collapseThree" class="collapse" aria-labelledby="thirdIssue" data-parent="#currentIssues">
-				<div class="card-body">
+				<div id="karmaFont" class="card-body">
 					Let's face it, these pesky unions are leeching us dry. They're corrupt, bloated, and hurting the very people who rely on them. 
 					With Monty Burns as Constable, he will crack down on this corruption, helping the poor helpless plant worker take back what is 
 					theirs and ultimately improve employee-employer relations through direct control. 
@@ -113,47 +114,56 @@
 			<div class="card">
 				<div class="card-header" id="fourthIssue">
 				  <h2 class="mb-0">
-					<button class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapsedFour">
+					<button id="playfairDisplayFont" class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapsedFour">
 						Nuclear <em>"Contamination"</em>
 					</button>
 				  </h2>
 				</div>
 				<div id="collapseFour" class="collapse" aria-labelledby="fourthIssue" data-parent="#currentIssues">
-				  <div class="card-body">
+				  <div id="karmaFont" class="card-body">
 					  There's a lot of balderdash and hearsay being thrown around about how Nuclear energy is <em>"unsafe"</em> and <em>"hazardous to the surrounding community".</em> Monty Burns wants you to 
 					  know this is simply untrue. These "claims" are simply slanderous remarks from Mr. Burns slackjawed opposition, who clearly have no moral stranding to resort to 
 					  such baseless mudslinging. With Monty Burns in charge, such claims would not be tolerated! 
 				  </div>
 				</div>
 			  </div>
+			  <div class="card">
+				  <div class="card-header" id="fifthIssue">
+					  <h2 class="mb-0">
+						  <button id="playfairDisplayFont" class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse" data-target="#collapseFive" aria-exanded="false" aria-controls="collapsedFive">
+							  
+						  </button>
+					  </h2>
+				  </div>
+			  </div>
 		  </div>
 		</div>
 	  </div>
 	  <div class="row">
 		<div class="col-4">
-			<div class="card text-center">
+			<div class="card text-center pb-4">
 					<img src="img/strikebreakers.png" class="card-img-top" alt="Mr. Burns talking with elderly strike breakers in a lavish office">
 					<div class="card-body">
 					  <h4 id="playfairDisplayFont">Equal Opportunity</h4>
-					  <p id="karmaFont" class="card-text text-left">Mr. Burns ensures that even the elderly are given equal work opportunities as well as listening to what they have to say.</p>
+					  <p id="karmaFont" class="card-text text-left">Mr. Burns shows he cares by ensuring that even the elderly are given equal work opportunities as well as listening to what they have to say.</p>
 					</div>
 				  </div>
 		</div>
 		<div class="col-4">
-			<div class="card text-left">
+			<div class="card text-left pb-4">
 			  <img class="card-img-top" src="img/burns-propaganda.jpg" alt="A painting of Mr Burns standing in a heroic pose dressed as a Pioneer. A small child and dog look up at him in awe.">
 			  <div class="card-body">
 				<h4 id="playfairDisplayFont" class="card-title text-center">A Portrait of a Man</h4>
-				<p id="karmaFont" class="card-text">Body</p>
+				<p id="karmaFont" class="card-text">Charles Montgomery Burns is a man of integrety and honor. He represents what Lexington is capable as a city and where we can go. </p>
 			  </div>
 			</div>
 		</div>
 		<div class="col-4">
-			<div class="card text-left">
-			  <img class="card-img-top" src="img/sharing-candy.jpg" alt="Mr Burns sharing">
+			<div class="card text-left mb-5">
+			  <img class="card-img-top" src="img/sharing-candy.jpg" alt="Mr Burns sharing candy with a baby">
 			  <div class="card-body">
 				<h4 id="playfairDisplayFont" class="card-title text-center">Family Focused</h4>
-				<p id="karmaFont" class="card-text">Body</p>
+				<p id="karmaFont" class="card-text">Monty Burns has always been a family man. Taking his time to interact with the future of America, our children. Whether that's sharing sound business advice or a lollipop.</p>
 			  </div>
 			</div>
 		</div>
