--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="bg-light">
 	<!-- Navbar Content -->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-danger">
-		<a id="playfairDisplayFont" class="navbar-brand ml-2" href="#">Vote Burns for Constable</a>
+		<a id="playfairDisplayFont" class="navbar-brand ml-2" href="#">Vote Monty Burns</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCampaign"
 			aria-controls="navbarCampaign" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -28,11 +28,11 @@
 				<li class="nav-item">
 					<a class="nav-link" id="karmaFont" href="#issesSection">The Issues</a>
 				</li>
-				<!-- <li class="nav-item">
-					<a class="nav-link" id="karmaFont" href="#meetBurns">What People Say</a>
-				</li> -->
 				<li class="nav-item">
-					<a class="nav-link" id="karmaFont" href="#">Support Us</a>
+					<a class="nav-link" id="karmaFont" href="#whoIsBurns">Who is Burns?</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" id="karmaFont" href="#supportUs">Support Us</a>
 				</li>
 			</ul>
 		</div>
@@ -41,7 +41,7 @@
 	<header class="masthead">
 		<div class="container h-100">
 			<div class="row h-100 align-items-center">
-				<div class="col-6 ml-6 text-left">
+				<div class="col-md-7 ml-6 text-left">
 					<div id="opacity" class="jumbotron bg-dark">
 						<h1 id="playfairDisplayFont" class="display-4 text-light">Monty Burns</h1>
 						<p id="karmaFont" class="lead text-light">A truly <em><strong>excellent</strong></em> candidate
@@ -63,7 +63,8 @@
 						alt="a campaign poster of Mr Burns, stylized in Blue and Red">
 					<div class="card-body">
 						<h4 id="playfairDisplayFont" class="card-title text-center">Go and Vote Burns!</h4>
-						<p id="karmaFont" class="card-text">Well, why are you just sitting there? Get out there and cast
+						<p id="karmaFont" class="card-text pb-4">Well, why are you just sitting there? Get out there and
+							cast
 							a ballot for <strong>Monty Burns</strong> on November 5<sup>th</sup>!</p>
 						<a class="btn btn-danger btn-block"
 							href="https://fayettecountyclerk.com/web/elections/votingLocations.htm" target="_blank">Go
@@ -73,59 +74,65 @@
 			</div>
 			<!-- Accoridon Collapse -->
 			<div class="col-md-8">
-				<div class="accordion mb-5" id="currentIssues">
+				<div class="accordion mb-4" id="currentIssues">
 					<div class="card">
 						<div class="card-header" id="firstIssue">
 							<h2 class="mb-0">
-								<button class="btn btn-link text-dark" type="button" data-toggle="collapse"
-									data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+								<button id="playfairDisplayFont" class="btn btn-link text-dark" type="button"
+									data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+									aria-controls="collapseOne">
 									Pensions and Elderly Care
 								</button>
 							</h2>
 						</div>
 						<div id="collapseOne" class="collapse show" aria-labelledby="firstIssue"
 							data-parent="#currentIssues">
-							<div class="card-body">
+							<div id="karmaFont" class="card-body">
 								Our elderly commuinty is so monstrously overlooked and underappreciated. Nobody ever
 								calls or writes them, or listen to what they have to say.
 								Not Mr Burns though, he says enough! He will ensure pension checks will arrive promptly
-								and on time,
+								and on time, that jobs are provided for people above 65, and visiting hours become
+								mandatory
+								in all nursing homes.
 							</div>
 						</div>
 					</div>
 					<div class="card">
 						<div class="card-header" id="secondIssue">
 							<h2 class="mb-0">
-								<button class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse"
-									data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								<button id="playfairDisplayFont" class="btn btn-link collapsed text-dark" type="button"
+									data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+									aria-controls="collapseTwo">
 									Support For Businesses
 								</button>
 							</h2>
 						</div>
 						<div id="collapseTwo" class="collapse" aria-labelledby="secondIssue"
 							data-parent="#currentIssues">
-							<div class="card-body">
-								Two assure edward whence the was. Who worthy yet ten boy denote wonder. Weeks views her
-								sight old tears sorry.
-								Additions can suspected its concealed put furnished. Met the why particular devonshire
-								decisively considered partiality.
-								Certain it waiting no entered is. Passed her indeed uneasy shy polite appear denied. Oh
-								less girl no walk. At he spot with five of view.
+							<div id="karmaFont" class="card-body">
+								These lecherous Mom and Pop shops are a plague on our society. They steal customers and
+								clients
+								from poor and struggling businesses while siphoning off thier thinning profit margins.
+								With Montgomery Burns
+								in charge this won't be the case! He promises to crackdown on these so called
+								"comapnies" and put a stop to their
+								practices.
 							</div>
 						</div>
 					</div>
 					<div class="card">
 						<div class="card-header" id="thirdIssue">
 							<h2 class="mb-0">
-								<button class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse"
-									data-target="#collapseThree" aria-expanded="false" aria-controls="collapsedThree">
+								<button id="playfairDisplayFont" class="btn btn-link collapsed text-dark" type="button"
+									data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
+									aria-controls="collapsedThree">
 									Union Rights
 								</button>
 							</h2>
 						</div>
 						<div id="collapseThree" class="collapse" aria-labelledby="thirdIssue"
 							data-parent="#currentIssues">
-							<div class="card-body">
+							<div id="karmaFont" class="card-body">
 								Let's face it, these pesky unions are leeching us dry. They're corrupt, bloated, and
 								hurting the very people who rely on them.
 								With Monty Burns as Constable, he will crack down on this corruption, helping the poor
@@ -137,15 +144,16 @@
 					<div class="card">
 						<div class="card-header" id="fourthIssue">
 							<h2 class="mb-0">
-								<button class="btn btn-link collapsed text-dark" type="button" data-toggle="collapse"
-									data-target="#collapseFour" aria-expanded="false" aria-controls="collapsedFour">
+								<button id="playfairDisplayFont" class="btn btn-link collapsed text-dark" type="button"
+									data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
+									aria-controls="collapsedFour">
 									Nuclear <em>"Contamination"</em>
 								</button>
 							</h2>
 						</div>
 						<div id="collapseFour" class="collapse" aria-labelledby="fourthIssue"
 							data-parent="#currentIssues">
-							<div class="card-body">
+							<div id="karmaFont" class="card-body">
 								There's a lot of balderdash and hearsay being thrown around about how Nuclear energy is
 								<em>"unsafe"</em> and <em>"hazardous to the surrounding community".</em> Monty Burns
 								wants you to
@@ -158,32 +166,37 @@
 					</div>
 				</div>
 				<div class="row">
-				<table class="table table-bordered">
-					<thead>
-						<tr>
-							<th>Campaign Donors</th>
-							<th>Amount Donated</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td scope="row"></td>
-							<td></td>
-							<td></td>
-						</tr>
-						<tr>
-							<td scope="row"></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
+					<!-- Donor Table -->
+					<table class="table table-bordered mx-3">
+						<caption id="karmaFont">List of Campaign Donors</caption>
+						<thead id="playfairDisplayFont">
+							<tr>
+								<th>Campaign Donors</th>
+								<th>Amount Donated</th>
+							</tr>
+						</thead>
+						<tbody id="karmaFont">
+							<tr>
+								<td scope="row">Businessmen of America</td>
+								<td>$25,000,000</td>
+							</tr>
+							<tr>
+								<td scope="row">American Nuclear Association</td>
+								<td>$450,000</td>
+							</tr>
+							<tr>
+								<td scope="row">Americans For Burns</td>
+								<td>$25,000</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div id="whoIsBurns" class="row">
+			<!-- Character Cards -->
 			<div class="col-md-4 my-4">
-				<div class="card text-center">
+				<div class="card text-center pb-5">
 					<img src="img/strikebreakers.png" class="card-img-top"
 						alt="Mr. Burns talking with elderly strike breakers in a lavish office">
 					<div class="card-body">
@@ -193,13 +206,14 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 my-4">
-				<div class="card text-left">
+			<div class="col-md-4 my-4 ">
+				<div class="card text-left pb-4">
 					<img class="card-img-top" src="img/burns-propaganda.jpg"
 						alt="A painting of Mr Burns standing in a heroic pose dressed as a Pioneer. A small child and dog look up at him in awe.">
 					<div class="card-body">
 						<h4 id="playfairDisplayFont" class="card-title text-center">A Portrait of a Man</h4>
-						<p id="karmaFont" class="card-text">Body</p>
+						<p id="karmaFont" class="card-text">Charles Montgomery Burns is a man of integrety and honor. He
+							represents what Lexington is capable of as a city and where we can go.</p>
 					</div>
 				</div>
 			</div>
@@ -208,9 +222,16 @@
 					<img class="card-img-top" src="img/sharing-candy.jpg" alt="Mr Burns sharing">
 					<div class="card-body">
 						<h4 id="playfairDisplayFont" class="card-title text-center">Family Focused</h4>
-						<p id="karmaFont" class="card-text">Body</p>
+						<p id="karmaFont" class="card-text">Monty Burns has always been a family man. Taking his time to
+							interact with the future of America, our children, whether that's sharing sound business
+							advice or a lollipop.</p>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div id="supportUs" class="row">
+			<div class="col-md-8">
+				
 			</div>
 		</div>
 	</div>
