--- a/index.html
+++ b/index.html
@@ -236,15 +236,15 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="modalLabel">Thank You</h5>
+					<h5 id="karmaFont" class="modal-title" id="modalLabel">Thank You For Your Generous Donation</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
-				<div class="modal-body">
+				<div id="karmaFont" class="modal-body">
 					The money has automatically been removed from your account.
 				</div>
-				<div class="modal-footer">
+				<div id="karmaFont" class="modal-footer">
 					<button type="button" class="btn btn-danger" data-dismiss="modal">Okay</button>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">Wait, What?</button>
 				</div>
